# the-sim

./: Cargo.toml
src/: bind_group.rs  buffer.rs  engine_base.rs  main.rs  new_abstractions.rs  texture.rs  util.rs
src/blackhole_gtx/: core.rs
src/blackhole_gtx/shaders/: draw-presolved-geodesics.frag  draw.frag  draw.vert
src/test_gpu/: core.rs
src/test_gpu/shaders/: compute.wgsl  draw.frag  draw.vert  draw.wgsl
src/util/: include_glsl.rs
src/wave/: core.rs
src/wave/shaders/: compute.wgsl  draw.frag  draw.vert
